--- a/docs/reference/elasticsearch/toc.yml
+++ b/docs/reference/elasticsearch/toc.yml
@@ -158,6 +158,8 @@ toc:
           - file: mapping-reference/geo-point.md
           - file: mapping-reference/geo-shape.md
           - file: mapping-reference/histogram.md
+          - file: mapping-reference/exponential-histogram.md
+          - file: mapping-reference/t-digest.md
           - file: mapping-reference/ip.md
           - file: mapping-reference/parent-join.md
           - file: mapping-reference/keyword.md
