--- a/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/exponential_histogram/20_aggregations.yml
+++ b/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/exponential_histogram/20_aggregations.yml
@@ -128,3 +128,18 @@ setup:
 
   - match: { hits.total.value: 5 }
   - match: { aggregations.min_agg.value: -1000.0 }
+
+---
+"Max aggregation":
+  - do:
+      search:
+        index: test_exponential_histogram
+        size: 0
+        body:
+          aggs:
+            max_agg:
+              max:
+                field: histo
+
+  - match: { hits.total.value: 5 }
+  - match: { aggregations.max_agg.value: 13000.0 }
