--- a/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/exponential_histogram/30_aggregate_metric_aggregations_compatibility.yml
+++ b/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/exponential_histogram/30_aggregate_metric_aggregations_compatibility.yml
@@ -30,7 +30,7 @@ setup:
         body:
           '@timestamp': "2023-01-01T00:00:00Z"
           histo_or_aggregate_metric:
-            min: 1.0
+            min: 0.9
             max: 10.0
             sum: 20.0
             value_count: 3
@@ -107,3 +107,33 @@ setup:
               avg:
                 field: histo_or_aggregate_metric
   - match: { aggregations.avg_metric.value: 12.0 }
+
+---
+"Min aggregation over aggregate_metric_double and exponential_histogram":
+  - do:
+      search:
+        index: test-data-stream
+        size: 0
+        body:
+          aggs:
+            min_agg:
+              min:
+                field: histo_or_aggregate_metric
+
+  - match: { hits.total.value: 2 }
+  - match: { aggregations.min_agg.value: 0.9 }
+
+---
+"Max aggregation over aggregate_metric_double and exponential_histogram":
+  - do:
+      search:
+        index: test-data-stream
+        size: 0
+        body:
+          aggs:
+            max_agg:
+              max:
+                field: histo_or_aggregate_metric
+
+  - match: { hits.total.value: 2 }
+  - match: { aggregations.max_agg.value: 10.0 }
