Support Base64 encoding for dense vector queries
Add support for Base64-encoded query vectors alongside existing hex
encoding. When both encodings are valid for a given string, the
decoder prioritizes hex if it matches the expected dimensions,
otherwise tries base64. This disambiguation uses the configured
field dimensions to prefer the encoding that matches exactly.

For BFLOAT16 fields, both BFloat16-encoded (2 bytes/dim) and
Float-encoded (4 bytes/dim) base64 vectors are accepted, with
automatic detection based on byte length compatibility.

Updated VectorData serialization to handle base64 strings for
newer transport versions while maintaining backward compatibility
with hex-only legacy versions.

Changes:
- Add decodeQueryVector() with hex/base64 disambiguation logic
- Support base64 encoding for FLOAT, BFLOAT16, BYTE, and BIT types
- Prioritize hex when dimensions match, fallback to base64
- Handle BFLOAT16 ambiguity (2-byte vs 4-byte encoding)
- Update VectorData.writeTo() for backward compatibility
- Simplify test expectations to match consistent error messages

Relates to #138190

--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/search.vectors/170_knn_search_hex_encoded_byte_vectors.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/search.vectors/170_knn_search_hex_encoded_byte_vectors.yml
@@ -134,7 +134,7 @@ setup:
 "Knn search with hex string for byte field - cannot decode string" :
   # '40af20a' is garbage :)
   - do:
-      catch: /failed to parse field \[query_vector\]|valid base64 or hex string|decoded bytes length|does not support base64 query vectors(\s+transport version \[\d+\])?/
+      catch: /failed to parse field \[query_vector\]/
       search:
         index: knn_hex_vector_index
         body:
