--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -321,6 +321,9 @@ tests:
 - class: org.elasticsearch.snapshots.SnapshotStatusApisIT
   method: testFailedSnapshot
   issue: https://github.com/elastic/elasticsearch/issues/141279
+- class: org.elasticsearch.xpack.esql.qa.mixed.MixedClusterEsqlSpecIT
+  method: test {csv-spec:spatial_shapes.CartesianPolygonEnvelopeXYMinMax}
+  issue: https://github.com/elastic/elasticsearch/issues/141425
 
 # Examples:
 #
