--- a/docs/changelog/141389.yaml
+++ b/docs/changelog/141389.yaml
@@ -1,5 +1,5 @@
 pr: 141389
 summary: Increase the per-index limit for merges to half the CPUs
-area: "Distributed, Vector Search"
+area: "Distributed"
 type: enhancement
 issues: []
