--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -330,6 +330,9 @@ tests:
 - class: org.elasticsearch.search.query.VectorIT
   method: testFilteredQueryStrategy
   issue: https://github.com/elastic/elasticsearch/issues/141469
+- class: org.elasticsearch.xpack.security.authc.TokenServiceTests
+  method: testAttachAndGetToken
+  issue: https://github.com/elastic/elasticsearch/issues/141470
 
 # Examples:
 #
