--- a/docs/changelog/141519.yaml
+++ b/docs/changelog/141519.yaml
@@ -1,5 +1,6 @@
 area: Machine Learning
-issues: []
+issues:
+ - 140511
 pr: 141519
 summary: Reduce locking when persisting ML job statistics
 type: bug
