--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -333,6 +333,9 @@ tests:
 - class: org.elasticsearch.xpack.security.authc.TokenServiceTests
   method: testAttachAndGetToken
   issue: https://github.com/elastic/elasticsearch/issues/141470
+- class: org.elasticsearch.index.codec.tsdb.es819.ES819TSDBDocValuesFormatTests
+  method: testOptionalColumnAtATimeReader
+  issue: https://github.com/elastic/elasticsearch/issues/141529
 
 # Examples:
 #
