--- a/x-pack/plugin/inference/src/yamlRestTest/resources/rest-api-spec/test/inference/30_semantic_text_inference.yml
+++ b/x-pack/plugin/inference/src/yamlRestTest/resources/rest-api-spec/test/inference/30_semantic_text_inference.yml
@@ -1422,5 +1422,35 @@ setup:
   - match:  { hits.hits.0._source._inference_fields.dense_field.inference.chunks.dense_field.0.start_offset: 0 }
   - match:  { hits.hits.0._source._inference_fields.dense_field.inference.chunks.dense_field.0.end_offset: 22 }
 
+---
+"Get source with _source_includes=_inference_fields":
+  - requires:
+      cluster_features: "semantic_text.inference_metadata_fields.enabled_by_default"
+      reason: Test requires the inference metadata fields format
 
+  - do:
+      indices.create:
+        index: dest-index
+        body:
+          mappings:
+            properties:
+              field1:
+                type: semantic_text
+                inference_id: dense-inference-id
 
+  - do:
+      index:
+        index: dest-index
+        id: doc_1
+        body:
+          field1: "value1"
+        refresh: true
+
+  - do:
+      get:
+        index: dest-index
+        id: doc_1
+        _source_includes: _inference_fields
+
+  - match: { _id: doc_1 }
+  - exists: _source._inference_fields
