[CI] HeapAttackIT testLastAggWithGiantText and testLastAggWithGiantText failing (#141550) - Mute the two tests

--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -336,6 +336,11 @@ tests:
 - class: org.elasticsearch.indices.recovery.IndexRecoveryIT
   method: testSourceThrottling
   issue: https://github.com/elastic/elasticsearch/issues/141548
+- class: org.elasticsearch.xpack.esql.heap_attack.HeapAttackIT
+  methods:
+    - testLastAggWithGiantText
+    - testFirstAggWithGiantText
+  issue: https://github.com/elastic/elasticsearch/issues/141550
 
 # Examples:
 #
