Update log defs

--- a/distribution/src/config/log4j2.properties
+++ b/distribution/src/config/log4j2.properties
@@ -157,47 +157,122 @@ logger.esql_querylog_rolling.additivity = false
 logger.entitlements_awt.name = org.elasticsearch.entitlement.runtime.policy.PolicyManager.(server).java.desktop.java.awt
 logger.entitlements_awt.level = error
 
-packages = org.elasticsearch.common.logging.action
 ######## Search Action log JSON ####################
-appender.search_actionlog.type = ActionLoggerAppender
+# Rolling appender
+appender.search_actionlog.type = RollingFile
 appender.search_actionlog.name = search_actionlog
-appender.search_actionlog.actionType = search
-appender.search_actionlog.basePath = ${sys:es.logs.base_path}${sys:file.separator}${sys:es.logs.cluster_name}
-
+appender.search_actionlog.fileName = ${sys:es.logs.base_path}${sys:file.separator}${sys:es.logs\
+  .cluster_name}_search_log.json
+appender.search_actionlog.layout.type = ECSJsonLayout
+appender.search_actionlog.layout.dataset = elasticsearch.esql_querylog
+# Rolling policies
+appender.search_actionlog.filePattern = ${sys:es.logs.base_path}${sys:file.separator}${sys:es.logs\
+  .cluster_name}_search_log-%i.json.gz
+appender.search_actionlog.policies.type = Policies
+appender.search_actionlog.policies.size.type = SizeBasedTriggeringPolicy
+appender.search_actionlog.policies.size.size = 1GB
+appender.search_actionlog.strategy.type = DefaultRolloverStrategy
+appender.search_actionlog.strategy.max = 4
+# Async appender
+appender.search_actionlog_async.type = Async
+appender.search_actionlog_async.name = search_actionlog_async
+appender.search_actionlog_async.appenderRef.type = AppenderRef
+appender.search_actionlog_async.appenderRef.ref = search_actionlog
+appender.search_actionlog_async.bufferSize = 256
+appender.search_actionlog_async.blocking = false
+appender.search_actionlog_async.shutdownTimeout = 1000
+# Logger
 logger.search_actionlog.name = search.actionlog
 logger.search_actionlog.level = trace
-logger.search_actionlog.appenderRef.search_actionlog.ref = search_actionlog
+logger.search_actionlog.appenderRef.search_actionlog_async.ref = search_actionlog_async
 logger.search_actionlog.additivity = false
 
 ######## SQL Action log JSON ####################
-appender.sql_actionlog.type = ActionLoggerAppender
+# Rolling appender
+appender.sql_actionlog.type = RollingFile
 appender.sql_actionlog.name = sql_actionlog
-appender.sql_actionlog.actionType = sql
-appender.sql_actionlog.basePath = ${sys:es.logs.base_path}${sys:file.separator}${sys:es.logs.cluster_name}
-
+appender.sql_actionlog.fileName = ${sys:es.logs.base_path}${sys:file.separator}${sys:es.logs\
+  .cluster_name}_sql_log.json
+appender.sql_actionlog.layout.type = ECSJsonLayout
+appender.sql_actionlog.layout.dataset = elasticsearch.esql_querylog
+# Rolling policies
+appender.sql_actionlog.filePattern = ${sys:es.logs.base_path}${sys:file.separator}${sys:es.logs\
+  .cluster_name}_sql_log-%i.json.gz
+appender.sql_actionlog.policies.type = Policies
+appender.sql_actionlog.policies.size.type = SizeBasedTriggeringPolicy
+appender.sql_actionlog.policies.size.size = 1GB
+appender.sql_actionlog.strategy.type = DefaultRolloverStrategy
+appender.sql_actionlog.strategy.max = 4
+# Async appender
+appender.sql_actionlog_async.type = Async
+appender.sql_actionlog_async.name = sql_actionlog_async
+appender.sql_actionlog_async.appenderRef.type = AppenderRef
+appender.sql_actionlog_async.appenderRef.ref = sql_actionlog
+appender.sql_actionlog_async.bufferSize = 256
+appender.sql_actionlog_async.blocking = false
+appender.sql_actionlog_async.shutdownTimeout = 1000
+# Logger
 logger.sql_actionlog.name = sql.actionlog
 logger.sql_actionlog.level = trace
-logger.sql_actionlog.appenderRef.sql_actionlog.ref = sql_actionlog
+logger.sql_actionlog.appenderRef.sql_actionlog_async.ref = sql_actionlog_async
 logger.sql_actionlog.additivity = false
 
-######## EQL Action log JSON ####################
-appender.eql_actionlog.type = ActionLoggerAppender
-appender.eql_actionlog.name = eql_actionlog
-appender.eql_actionlog.actionType = eql
-appender.eql_actionlog.basePath = ${sys:es.logs.base_path}${sys:file.separator}${sys:es.logs.cluster_name}
+######## EQSL Action log JSON ####################
+# Rolling appender
+appender.esql_actionlog.type = RollingFile
+appender.esql_actionlog.name = esql_actionlog
+appender.esql_actionlog.fileName = ${sys:es.logs.base_path}${sys:file.separator}${sys:es.logs\
+  .cluster_name}_esql_log.json
+appender.esql_actionlog.layout.type = ECSJsonLayout
+appender.esql_actionlog.layout.dataset = elasticsearch.eesql_querylog
+# Rolling policies
+appender.esql_actionlog.filePattern = ${sys:es.logs.base_path}${sys:file.separator}${sys:es.logs\
+  .cluster_name}_esql_log-%i.json.gz
+appender.esql_actionlog.policies.type = Policies
+appender.esql_actionlog.policies.size.type = SizeBasedTriggeringPolicy
+appender.esql_actionlog.policies.size.size = 1GB
+appender.esql_actionlog.strategy.type = DefaultRolloverStrategy
+appender.esql_actionlog.strategy.max = 4
+# Async appender
+appender.esql_actionlog_async.type = Async
+appender.esql_actionlog_async.name = esql_actionlog_async
+appender.esql_actionlog_async.appenderRef.type = AppenderRef
+appender.esql_actionlog_async.appenderRef.ref = esql_actionlog
+appender.esql_actionlog_async.bufferSize = 256
+appender.esql_actionlog_async.blocking = false
+appender.esql_actionlog_async.shutdownTimeout = 1000
+# Logger
+logger.esql_actionlog.name = esql.actionlog
+logger.esql_actionlog.level = trace
+logger.esql_actionlog.appenderRef.esql_actionlog_async.ref = esql_actionlog_async
+logger.esql_actionlog.additivity = false
 
+######## EQL Action log JSON ####################
+# Rolling appender
+appender.eql_actionlog.type = RollingFile
+appender.eql_actionlog.name = eql_actionlog
+appender.eql_actionlog.fileName = ${sys:es.logs.base_path}${sys:file.separator}${sys:es.logs\
+  .cluster_name}_eql_log.json
+appender.eql_actionlog.layout.type = ECSJsonLayout
+appender.eql_actionlog.layout.dataset = elasticsearch.eeql_querylog
+# Rolling policies
+appender.eql_actionlog.filePattern = ${sys:es.logs.base_path}${sys:file.separator}${sys:es.logs\
+  .cluster_name}_eql_log-%i.json.gz
+appender.eql_actionlog.policies.type = Policies
+appender.eql_actionlog.policies.size.type = SizeBasedTriggeringPolicy
+appender.eql_actionlog.policies.size.size = 1GB
+appender.eql_actionlog.strategy.type = DefaultRolloverStrategy
+appender.eql_actionlog.strategy.max = 4
+# Async appender
+appender.eql_actionlog_async.type = Async
+appender.eql_actionlog_async.name = eql_actionlog_async
+appender.eql_actionlog_async.appenderRef.type = AppenderRef
+appender.eql_actionlog_async.appenderRef.ref = eql_actionlog
+appender.eql_actionlog_async.bufferSize = 256
+appender.eql_actionlog_async.blocking = false
+appender.eql_actionlog_async.shutdownTimeout = 1000
+# Logger
 logger.eql_actionlog.name = eql.actionlog
 logger.eql_actionlog.level = trace
-logger.eql_actionlog.appenderRef.eql_actionlog.ref = eql_actionlog
+logger.eql_actionlog.appenderRef.eql_actionlog_async.ref = eql_actionlog_async
 logger.eql_actionlog.additivity = false
-
-######## EQSL Action log JSON ####################
-appender.eqsl_actionlog.type = ActionLoggerAppender
-appender.eqsl_actionlog.name = esql_actionlog
-appender.eqsl_actionlog.actionType = eql
-appender.eqsl_actionlog.basePath = ${sys:es.logs.base_path}${sys:file.separator}${sys:es.logs.cluster_name}
-
-logger.eqsl_actionlog.name = esql.actionlog
-logger.eqsl_actionlog.level = trace
-logger.eqsl_actionlog.appenderRef.eql_actionlog.ref = esql_actionlog
-logger.eqsl_actionlog.additivity = false
