--- a/docs/changelog/141565.yaml
+++ b/docs/changelog/141565.yaml
@@ -1,5 +1,5 @@
 area: Allocation
 issues: []
 pr: 141565
-summary: Fix bug in `BalancedShardsAllocator`
+summary: Don't overwrite decision with `NOT_PREFERRED` unless its an improvement
 type: bug
