Support Base64 encoding for dense vector queries
Add Base64 encoding support for kNN query vectors alongside hex
encoding. When both encodings are valid, prefer hex if dimensions
match exactly, otherwise fallback to base64. For BFLOAT16 fields,
detect between BFloat16-encoded (2 bytes/dim) and Float-encoded
(4 bytes/dim) based on decoded byte length.

Move vector decoding logic from DenseVectorFieldMapper to VectorData
for better cohesion. Add dims == null guard in createKnnQuery and
createExactKnnQuery to ensure queries on empty indexes with dynamic
dimensions return MatchNoDocsQuery consistently for both array-based
and encoded vectors.

Simplify VectorData.equals() using bytesOrNull() helper to maintain
semantic equality for hex-encoded strings and their byte equivalents
during serialization roundtrips.

Closes #138190

--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/search.vectors/172_knn_query_base64_vectors.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/search.vectors/172_knn_query_base64_vectors.yml
@@ -401,3 +401,62 @@ setup:
   - match: { hits.total.value: 1 }
   - match: { hits.hits.0._id: "1" }
   - match: { hits.hits.0.fields.name.0: "doc1" }
+
+---
+"kNN query on empty index with dynamic dims returns empty results":
+  # Create an index with dynamic dimensions (dims not specified) and no documents
+  - do:
+      indices.create:
+        index: knn_empty_dynamic_dims_index
+        body:
+          mappings:
+            properties:
+              vector:
+                type: dense_vector
+                index: true
+                similarity: l2_norm
+
+  # Array-based query returns empty results (MatchNoDocsQuery)
+  - do:
+      search:
+        index: knn_empty_dynamic_dims_index
+        body:
+          query:
+            knn:
+              field: vector
+              query_vector: [0.1, 0.2, 0.3]
+              k: 1
+              num_candidates: 1
+
+  - match: { hits.total.value: 0 }
+  - length: { hits.hits: 0 }
+
+  # Base64 encoded query also returns empty results (consistent behavior)
+  - do:
+      search:
+        index: knn_empty_dynamic_dims_index
+        body:
+          query:
+            knn:
+              field: vector
+              query_vector: "PczMzT5MzM0+mZma"
+              k: 1
+              num_candidates: 1
+
+  - match: { hits.total.value: 0 }
+  - length: { hits.hits: 0 }
+
+  # Hex encoded query also returns empty results
+  - do:
+      search:
+        index: knn_empty_dynamic_dims_index
+        body:
+          query:
+            knn:
+              field: vector
+              query_vector: "0a141e"
+              k: 1
+              num_candidates: 1
+
+  - match: { hits.total.value: 0 }
+  - length: { hits.hits: 0 }
