Small change to see if I can push

--- a/docs/changelog/141340.yaml
+++ b/docs/changelog/141340.yaml
@@ -1,5 +1,5 @@
 area: ES|QL
 issues: []
 pr: 141340
-summary: Skip nullifying aliases for Aggregate groups
+summary: Skip nullifying aliases for Aggregate groups.
 type: bug
