--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -338,9 +338,12 @@ tests:
   issue: https://github.com/elastic/elasticsearch/issues/141548
 - class: org.elasticsearch.xpack.esql.heap_attack.HeapAttackIT
   methods:
-    - testLastAggWithGiantText
-    - testFirstAggWithGiantText
+  - testLastAggWithGiantText
+  - testFirstAggWithGiantText
   issue: https://github.com/elastic/elasticsearch/issues/141550
+- class: org.elasticsearch.xpack.inference.external.http.sender.RequestExecutorServiceTests
+  method: testExecute_Throws_WhenRateLimitedQueueIsFull
+  issue: https://github.com/elastic/elasticsearch/issues/141231
 
 # Examples:
 #
