--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -344,6 +344,9 @@ tests:
 - class: org.elasticsearch.xpack.inference.external.http.sender.RequestExecutorServiceTests
   method: testExecute_Throws_WhenRateLimitedQueueIsFull
   issue: https://github.com/elastic/elasticsearch/issues/141231
+- class: org.elasticsearch.xpack.ml.inference.loadingservice.ModelLoadingServiceTests
+  method: testExpiredModelsAreEvictedBeforeLoading
+  issue: https://github.com/elastic/elasticsearch/issues/141589
 
 # Examples:
 #
