--- a/docs/changelog/141534.yaml
+++ b/docs/changelog/141534.yaml
@@ -2,5 +2,5 @@ area: Search
 issues:
  - 141075
 pr: 141534
-summary: Enable retrieval of only the `_inference_fields` from `semantic_text`
+summary: Fixes bug that prevented retrieving _inference_fields via _source_includes
 type: bug
