--- a/x-pack/plugin/inference/src/yamlRestTest/resources/rest-api-spec/test/inference/30_semantic_text_inference.yml
+++ b/x-pack/plugin/inference/src/yamlRestTest/resources/rest-api-spec/test/inference/30_semantic_text_inference.yml
@@ -1424,6 +1424,11 @@ setup:
 
 ---
 "Get _inference_fields via _source_includes":
+
+  - requires:
+      cluster_features: "inference_fields.get_via_source_includes"
+      reason: Bug fix for inference fields get via source includes
+
   - do:
       index:
         index: test-index
