Add some vibe coded fixes, mostly just to test out

--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/indices.recovery/10_basic.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/indices.recovery/10_basic.yml
@@ -1,9 +1,8 @@
 ---
 "Indices recovery test":
-
   - do:
       indices.create:
-        index:  test_1
+        index: test_1
         body:
           settings:
             index:
@@ -21,29 +20,28 @@
         allow_no_indices: true
         expand_wildcards: open
 
-  - match: { test_1.shards.0.type:                                 "EMPTY_STORE"           }
-  - match: { test_1.shards.0.stage:                                "DONE"                  }
-  - match: { test_1.shards.0.primary:                              true                    }
-  - match: { test_1.shards.0.start_time:                           /^2\d\d\d-.+/           }
-  - match: { test_1.shards.0.target.ip:                            /^\d+\.\d+\.\d+\.\d+$/  }
-  - gte:   { test_1.shards.0.index.files.total:                    0                       }
-  - gte:   { test_1.shards.0.index.files.reused:                   0                       }
-  - gte:   { test_1.shards.0.index.files.recovered:                0                       }
-  - match: { test_1.shards.0.index.files.percent:                  /^\d+\.\d\%$/           }
-  - gte:   { test_1.shards.0.index.size.total_in_bytes:            0                       }
-  - gte:   { test_1.shards.0.index.size.reused_in_bytes:           0                       }
-  - gte:   { test_1.shards.0.index.size.recovered_in_bytes:        0                       }
-  - gte:   { test_1.shards.0.index.size.recovered_from_snapshot_in_bytes:   0                       }
-  - match: { test_1.shards.0.index.size.percent:                   /^\d+\.\d\%$/           }
-  - gte:   { test_1.shards.0.index.source_throttle_time_in_millis: 0                       }
-  - gte:   { test_1.shards.0.index.target_throttle_time_in_millis: 0                       }
-  - gte:   { test_1.shards.0.translog.recovered:                   0                       }
-  - gte:   { test_1.shards.0.translog.total:                       -1                      }
-  - gte:   { test_1.shards.0.translog.total_on_start:              0                       }
-  - gte:   { test_1.shards.0.translog.total_time_in_millis:        0                       }
-  - gte:   { test_1.shards.0.verify_index.check_index_time_in_millis:     0                       }
-  - gte:   { test_1.shards.0.verify_index.total_time_in_millis:           0                       }
-
+  - match: { test_1.shards.0.type: "EMPTY_STORE" }
+  - match: { test_1.shards.0.stage: "DONE" }
+  - match: { test_1.shards.0.primary: true }
+  - match: { test_1.shards.0.start_time: /^2\d\d\d-.+/ }
+  - match: { test_1.shards.0.target.ip: "/^[0-9a-f:.%]+$/" }
+  - gte: { test_1.shards.0.index.files.total: 0 }
+  - gte: { test_1.shards.0.index.files.reused: 0 }
+  - gte: { test_1.shards.0.index.files.recovered: 0 }
+  - match: { test_1.shards.0.index.files.percent: /^\d+\.\d\%$/ }
+  - gte: { test_1.shards.0.index.size.total_in_bytes: 0 }
+  - gte: { test_1.shards.0.index.size.reused_in_bytes: 0 }
+  - gte: { test_1.shards.0.index.size.recovered_in_bytes: 0 }
+  - gte: { test_1.shards.0.index.size.recovered_from_snapshot_in_bytes: 0 }
+  - match: { test_1.shards.0.index.size.percent: /^\d+\.\d\%$/ }
+  - gte: { test_1.shards.0.index.source_throttle_time_in_millis: 0 }
+  - gte: { test_1.shards.0.index.target_throttle_time_in_millis: 0 }
+  - gte: { test_1.shards.0.translog.recovered: 0 }
+  - gte: { test_1.shards.0.translog.total: -1 }
+  - gte: { test_1.shards.0.translog.total_on_start: 0 }
+  - gte: { test_1.shards.0.translog.total_time_in_millis: 0 }
+  - gte: { test_1.shards.0.verify_index.check_index_time_in_millis: 0 }
+  - gte: { test_1.shards.0.verify_index.total_time_in_millis: 0 }
 ---
 "Indices recovery test for closed index":
   - requires:
@@ -53,7 +51,7 @@
 
   - do:
       indices.create:
-        index:  test_2
+        index: test_2
         body:
           settings:
             index:
@@ -74,33 +72,32 @@
         index: [test_2]
         human: true
 
-  - match: { test_2.shards.0.type:                                          "EXISTING_STORE"        }
-  - match: { test_2.shards.0.stage:                                         "DONE"                  }
-  - match: { test_2.shards.0.primary:                                       true                    }
-  - match: { test_2.shards.0.start_time:                                    /^2\d\d\d-.+/           }
-  - match: { test_2.shards.0.target.ip:                                     /^\d+\.\d+\.\d+\.\d+$/  }
-  - gte:   { test_2.shards.0.index.files.total:                             0                       }
-  - gte:   { test_2.shards.0.index.files.reused:                            0                       }
-  - gte:   { test_2.shards.0.index.files.recovered:                         0                       }
-  - match: { test_2.shards.0.index.files.percent:                           /^\d+\.\d\%$/           }
-  - gte:   { test_2.shards.0.index.size.total_in_bytes:                     0                       }
-  - gte:   { test_2.shards.0.index.size.reused_in_bytes:                    0                       }
-  - gte:   { test_2.shards.0.index.size.recovered_in_bytes:                 0                       }
-  - match: { test_2.shards.0.index.size.percent:                            /^\d+\.\d\%$/           }
-  - gte:   { test_2.shards.0.index.source_throttle_time_in_millis:          0                       }
-  - gte:   { test_2.shards.0.index.target_throttle_time_in_millis:          0                       }
-  - gte:   { test_2.shards.0.translog.recovered:                            0                       }
-  - gte:   { test_2.shards.0.translog.total:                                0                       }
-  - gte:   { test_2.shards.0.translog.total_on_start:                       0                       }
-  - gte:   { test_2.shards.0.translog.total_time_in_millis:                 0                       }
-  - gte:   { test_2.shards.0.verify_index.check_index_time_in_millis:       0                       }
-  - gte:   { test_2.shards.0.verify_index.total_time_in_millis:             0                       }
+  - match: { test_2.shards.0.type: "EXISTING_STORE" }
+  - match: { test_2.shards.0.stage: "DONE" }
+  - match: { test_2.shards.0.primary: true }
+  - match: { test_2.shards.0.start_time: /^2\d\d\d-.+/ }
+  - match: { test_2.shards.0.target.ip: "/^[0-9a-f:.%]+$/" }
+  - gte: { test_2.shards.0.index.files.total: 0 }
+  - gte: { test_2.shards.0.index.files.reused: 0 }
+  - gte: { test_2.shards.0.index.files.recovered: 0 }
+  - match: { test_2.shards.0.index.files.percent: /^\d+\.\d\%$/ }
+  - gte: { test_2.shards.0.index.size.total_in_bytes: 0 }
+  - gte: { test_2.shards.0.index.size.reused_in_bytes: 0 }
+  - gte: { test_2.shards.0.index.size.recovered_in_bytes: 0 }
+  - match: { test_2.shards.0.index.size.percent: /^\d+\.\d\%$/ }
+  - gte: { test_2.shards.0.index.source_throttle_time_in_millis: 0 }
+  - gte: { test_2.shards.0.index.target_throttle_time_in_millis: 0 }
+  - gte: { test_2.shards.0.translog.recovered: 0 }
+  - gte: { test_2.shards.0.translog.total: 0 }
+  - gte: { test_2.shards.0.translog.total_on_start: 0 }
+  - gte: { test_2.shards.0.translog.total_time_in_millis: 0 }
+  - gte: { test_2.shards.0.verify_index.check_index_time_in_millis: 0 }
+  - gte: { test_2.shards.0.verify_index.total_time_in_millis: 0 }
 ---
 "Indices recovery test index name not matching":
-
   - do:
       indices.create:
-        index:  test_1
+        index: test_1
         body:
           settings:
             index:
@@ -111,17 +108,14 @@
         wait_for_status: green
 
   - do:
-
       catch: missing
       indices.recovery:
         index: [foobar]
-
 ---
 "Indices recovery test, wildcard not matching any index":
-
   - do:
       indices.create:
-        index:  test_1
+        index: test_1
         body:
           settings:
             index:
@@ -144,7 +138,7 @@
 
   - do:
       indices.create:
-        index:  test_3
+        index: test_3
         body:
           settings:
             index:
