Extend fuse to load support for mv_min function.
Current for the mv_min function fuse to load doesn't kick in for high cardinality keyword fields:

```
{
  "properties": {
     "my_field": {
        "type": "keyword",
        "doc_values": {
            "cardinality": "high"
        }
     }
  }
}
```

Which uses MultiValuedBinaryDocValuesField.SeparateCount under the hood. This change adds supports for this.
Note that cardinality mapping attribute is currently behind a feature flag.

Similar to #139437
Relates to elastic/logs-program#21

--- a/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/esql/250_high_cardinality_keyword.yml
+++ b/x-pack/plugin/src/yamlRestTest/resources/rest-api-spec/test/esql/250_high_cardinality_keyword.yml
@@ -46,3 +46,25 @@ setup:
   - match: {columns.0.type: "double"}
   - length: {values.0: 1}
   - match: {values.0.0: 4.5}
+
+---
+"Test mv_min":
+  - do:
+      index:
+        index: test
+        id: "3"
+        body:
+          keyword: [ "abcdef", "ab", "abcdefg" ]
+
+  - do:
+      esql.query:
+        body:
+          query: 'FROM test | EVAL k = mv_min(keyword) | SORT k | KEEP k'
+
+  - length: {columns: 1}
+  - match: {columns.0.name: "k"}
+  - match: {columns.0.type: "keyword"}
+  - length: {values: 3}
+  - match: {values.0.0: "abc"}
+  - match: {values.1.0: "abcdef"}
+  - match: {values.2.0: "ab"}
