--- a/docs/changelog/141651.yaml
+++ b/docs/changelog/141651.yaml
@@ -1,5 +1,6 @@
-area: "ES|QL, ES|QL"
-issues: []
+area: ES|QL
+issues:
+  - 141199
 pr: 141651
 summary: "[TEST] Fix discrepancy in docs & kibana generation"
 type: bug
