--- a/docs/release-notes/changelog-bundles/9.3.0.yml
+++ b/docs/release-notes/changelog-bundles/9.3.0.yml
@@ -3,6 +3,16 @@ released: false
 generated: 2026-01-30T15:33:50.122842428Z
 changelogs:
   - pr: []
+    summary: Introduces a guided UI flow in Kibana to connect self-managed clusters to Elastic Cloud-hosted services like AutoOps and the Elastic Inference Service.
+    area: Management
+    type: feature
+    issues: []
+    highlight:
+      notable: true
+      title: New Cloud Connect UI for self-managed installations
+      body: "Adds Cloud Connect functionality to Kibana, which allows you to use cloud solutions like AutoOps and Elastic Inference Service in your self-managed Elasticsearch clusters."
+      pr: []
+  - pr: []
     summary: Elastic Inference Service now adds new AI/ML models dynamically, independent of stack release cycles.
     area: Machine Learning
     type: feature
